--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
