--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-hook-form": "^7.51.5",
     "react-router-dom": "^6.23.1",
     "react-toastify": "^10.0.5",
+    "swiper": "^11.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
